hlx_statics/blocks/api-browser.css
main .api-browser-container {
    background-color: #fff;
}

main .api-browser {
    max-width: var(--spectrum-global-dimension-static-grid-fixed-max-width);
    margin: var(--spectrum-global-dimension-size-400) auto;
    margin-bottom: 0;
}

main .api-cards {
    display: grid;
    grid-template-columns: repeat(auto-fit, calc(var(--spectrum-global-dimension-size-4600) - var(--spectrum-global-dimension-size-800)));
    grid-auto-rows: calc(var(--spectrum-global-dimension-size-4600) - var(--spectrum-global-dimension-size-500));
    justify-content: center;
    gap: var(--spectrum-global-dimension-size-400);
    flex: 1;
}

@media screen and (max-width: 1280px) {
    main .api-cards {
        margin-top: var(--spectrum-global-dimension-size-400);
        display: flex;
        flex-direction: column;
    }
}

main .api-card {
    display: inline-flex;
    flex-direction: column;
    align-items: 'center';
    width: 100%;

    background: var(--spectrum-global-color-gray-100);
}

@media screen and (max-width: 1280px) {
    main .api-card {
        display: flex;
        width: 100%;
        align-items: center;
    }
}

main .api-cards-inner {
    display: flex;
}

@media screen and (max-width: 1280px) {
    main .api-cards-inner {
        flex-direction: column;
        align-items: center;
    }
}


main .api-card-inner {
    margin: 0 var(--spectrum-global-dimension-size-300);
    width: calc(var(--spectrum-global-dimension-size-4600) - var(--spectrum-global-dimension-size-800));
    height: calc(var(--spectrum-global-dimension-size-4600) - var(--spectrum-global-dimension-size-500));
}

main .api-card-inner:hover {
    border-color: var(--spectrum-card-border-color, var(--spectrum-global-color-gray-200));
}

@media screen and (max-width: 1280px) {
    main .api-card-inner {
        width: 0;
        margin: 0;
    }
}

main .api-card-body {
    height: calc(var(--spectrum-global-dimension-size-4600) - var(--spectrum-global-dimension-size-500));
    overflow: auto;
    text-align: left;
}

main .api-card-icon-container {
    position: absolute;
    height: var(--spectrum-global-dimension-size-800);
    z-index: 1;
}

main .api-card-icon {
    height: var(--spectrum-global-dimension-size-600);
    width: var(--spectrum-global-dimension-size-600);
    margin-top: 0;
}

main .api-card-icon img {
    display: block;
    height: 100%;
    object-fit: contain;
}

main .api-card-icon-container + .api-card-body-inner{
    top: var(--spectrum-global-dimension-size-800)
}

main .api-card-body-inner {
    position: relative;
    z-index: 1;
    background-color: var(--spectrum-global-color-gray-50);

}

main .api-card-title-container {
    margin-top: 0 !important;
    margin-bottom: var(--spectrum-global-dimension-size-100) !important;
}

main .api-card-title {
    font-size: var(--spectrum-global-dimension-size-200);
}

main .api-card-content {
    height: auto;
    margin-bottom: 0 !important;
}

main .api-card-button-container {
    display: flex;
    --gap: var(--spectrum-global-dimension-size-200);
    flex-wrap: wrap;
    margin: calc(-1 * var(--gap)) 0 0 calc(-1 * var(--gap));
    width: calc(100% + var(--gap));
    justify-content: flex-end;
}

main .api-card-button-container button{
    margin: var(--gap) 0 0 var(--gap);
}


@media screen and (max-width: 1280px) {
    main .api-card-button-container {
        justify-content: center;
    }
}

main .api-browser .filters {
    width: var(--spectrum-global-dimension-size-3000, var(--spectrum-alias-size-3000));
    align-items: flex-end;
    flex-direction: column;
    display: flex;
}

main .api-browser .filters-inner {
    align-items: flex-start;
    flex-direction: column;
    display: flex;
}

main .filter-item {
    margin-bottom: var(--spectrum-global-dimension-size-100, var(--spectrum-alias-size-100));
}

main .filters-list {
    margin-top: var(--spectrum-global-dimension-size-100);
    display: flex;
    flex-direction: column;
}

main .filter-label {
    margin-left: var(--spectrum-checkbox-text-gap);
}

